Update
- Retrait fichier servers.txt
- Ajout route courses get html
- Retrait ancien système de génération de png pour utiliser microservice
- nouveau système de génération html + propre avec couleurs par matiere
